# llmmeta

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  README.zh.md
.github/workflows/: update-models.yml
src/: api.rs  codegen.rs  main.rs  models.rs
src/codegen/: templates.rs
src/codegen/templates/: dart.rs  go.rs  python.rs  rust.rs  typescript.rs
tests/fixtures/: go-consumer-main.go.in
